web/style.css
@font-face {
    font-family: "Lupino Serif";
    src: url("/fonts/Lupino_v0.2_Serif-Light.woff2") format("woff2");
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "Lupino Serif";
    src: url("/fonts/Lupino_v0.2_Serif-Semibold.woff2") format("woff2");
    font-weight: 700;
    font-style: normal;
}

@font-face {
    font-family: "Fira Sans";
    src: url("/fonts/FiraSans-Italic.woff2") format("woff2");
    font-weight: 400;
    font-style: italic;
}

:root {
    --primary: 97;

    --dark: hsl(var(--primary), 80%, 5%);
    --darker: hsl(var(--primary), 40%, 15%);
    --darkish: hsl(var(--primary), 30%, 40%);
    --light: hsl(var(--primary), 20%, 90%);
    --lighter: hsl(var(--primary), 25%, 80%);
    --lightish: hsl(var(--primary), 30%, 70%);

    --background: var(--dark);
    --callout-background: var(--darker);
    --accents: var(--darkish);
    --text: var(--light);
    --muted: var(--lightish);

    --font-monospace: ui-monospace, "Cascadia Mono", "Segoe UI Mono", "Liberation Mono", Menlo, Monaco, Consolas, monospace;
    --font-serif: "Lupino Serif", Georgia, serif;

    --font-xs: clamp(0.64rem, -0.34vw + 0.72rem, 0.56rem);
    --font-sm: clamp(0.8rem, -0.02vw + 0.8rem, 0.8rem);
    --font-md: clamp(1rem, 0.54vw + 0.86rem, 1.13rem);
    --font-lg: clamp(1.25rem, 1.48vw + 0.88rem, 1.59rem);
    --font-xl: clamp(1.56rem, 2.99vw + 0.82rem, 2.25rem);
    --font-2xl: clamp(1.95rem, 5.34vw + 0.62rem, 3.18rem);

    --shadow: 0 4px 8px rgba(0 0 0 / 60%);

    --space-2xs: 0.15rem;
    --space-xs: 0.25rem;
    --space-sm: 0.5rem;
    --space-md: 1rem;
    --space-lg: 2rem;
    --space-xl: 3rem;
    --container: 800px;
}

html.light {
    --background: var(--light);
    --callout-background: var(--lighter);
    --accents: var(--lightish);
    --text: var(--dark);
    --muted: var(--darker);

    --shadow: 0 4px 8px rgba(0 0 0 / 15%);
}

*, *::before, *::after {
    box-sizing: border-box;
    margin: 0;
}

html {
    min-height: 100%;
    border: 0.75rem solid var(--muted);
    font-size: var(--font-md);
}

@media screen and (max-width: 768px) {
    html {
        border-width: 0.3rem;
    }
}

body {
    font-family: var(--font-serif);
    background-color: var(--background);
    color: var(--text);
    line-height: 1.6;
    font-weight: 200;
    padding-block: 2rem;
}

@media screen and (max-width: 768px) {
    body { margin: 0.65rem; }
}

::selection {
    background: var(--muted);
    color: var(--background);
}

hr {
    margin-block: 0;
    border: 0;
    height: 1px;
    width: 100%;
    background-color: var(--accents);
}

h1 {
    font-size: var(--font-xl);
}

h2 {
    font-size: var(--font-lg);
}

h1, h2, h3 { line-height: 1.15; }
h5, h6 { font-size: var(--font-md); }

h1, h2, h3, h4, h5, h6 {
    margin-block: 0;
    font-weight: 600;
}

b,
strong,
.bold {
    font-weight: 600;
}

.regular { font-weight: 200; }

a {
    color: currentColor;
    text-decoration: none;
    border-bottom: 1px solid var(--accents);
}

p, ul {
    margin-top: 0;
}

em,
.italic {
    font-style: italic;
    font-family: "Fira Sans";
    color: var(--muted);
    font-size: 1.05em;
    line-height: calc(1 / 1.05);
}

sup {
    display: inline-block;
    margin-top: -0.3em;
}

img {
    width: 100%;
    height: auto;
    display: block;
}

ul[role="list"] {
    list-style: none;
    padding-left: 0;
}

:not(.grid, .cluster, .stack) > li + li {
    margin-top: var(--space-sm);
}

blockquote {
    border-left: 1px solid var(--accents);
    color: var(--muted);
    margin-inline: 0;
    padding-inline: 40px;
    padding-left: 1rem;
    padding-right: 0;
    font-family: "Fira Sans";
    font-style: italic;
}

figure {
    margin-inline: 0;
}

figcaption {
    margin-top: 3px;
    color: var(--muted);
    font-size: var(--font-sm);
    font-family: "Fira Sans";
    font-style: italic;
}

pre,
code,
.monospace {
    font-size: var(--font-sm);
    font-weight: 400;
    font-family: var(--font-monospace);
}

pre {
    background-color: var(--darker);
    color: var(--light);
    padding: 1rem;
    width: 100%;
    overflow-x: auto;
    tab-size: 2;
}

pre code {
    background: none;
    border-radius: 0;
    box-shadow: none;
    padding: 0;
}

code {
    background: var(--callout-background);
    box-shadow: 0 1px 0 var(--accents);
    border-radius: 2px;
    padding: 3px 4px;
}

button {
    appearance: none;
    border: none;
    background: none;
    font-family: inherit;
    color: currentColor;
    font-size: inherit;
}

.ml-sm { margin-left: 0.5rem; }
.ml-md { margin-left: 1rem; }
.mt-xs { margin-top: 0.25rem !important; }
.mt-sm { margin-top: 0.5rem; }
.mt-md { margin-top: 1rem; }
.mt-lg { margin-top: 2rem; }
.mt-huge { margin-top: 20vh; }

.text-2xl { font-size: var(--font-2xl); line-height: 1.2; }
.text-xl { font-size: var(--font-xl); line-height: 1.2; }
.text-lg { font-size: var(--font-lg); line-height: 1.25; }
.text-md { font-size: var(--font-md); }
.text-sm { font-size: var(--font-sm); }
.text-right { text-align: right; }

.flex { display: flex; }
.flex-1 { flex: 1; }
.inline-block { display: inline-block; }
.justify-start { justify-content: flex-start; }
.justify-between { justify-content: space-between; }
.align-start { align-items: flex-start; }
.align-center { align-items: center; }
.align-middle { vertical-align: middle; }

.caps {
    text-transform: uppercase;
    letter-spacing: 0.05em;
}

.no-decoration {
    text-decoration: none;
    border-bottom: none;
}

.underline {
    text-decoration: none;
    border-bottom: 1px solid var(--accents);
}

.rounded {
    border-radius: 4px;
    overflow: hidden;
}

.container {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    max-width: var(--container);
    padding-left: 20px;
    padding-right: 20px;
}

.stack {
    --stack-spacing: 1rem;

    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.stack > * { width: 100%; }
.stack > * + * { margin-top: var(--stack-spacing); }
.stack[data-size="md"] { --stack-spacing: var(--space-md); }
.stack[data-size="lg"] { --stack-spacing: 2.5rem; }

.cluster {
    --cluster-spacing: 1rem;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-left: calc(-1 * var(--cluster-spacing));
}

.cluster > * {
    margin-left: var(--cluster-spacing);
    margin-top: 0;
}
.cluster[data-size="sm"] { --cluster-spacing: var(--space-sm); }
.cluster[data-size="2xs"] { --cluster-spacing: var(--space-2xs); }

.muted { color: var(--muted); }
.darkish { color: var(--accents); }

.entry h2:not(:first-child) {
    margin-top: var(--space-xl);
}

.Posts,
.Books {
    background-color: var(--muted);
    color: var(--background);
    padding: 2rem;
    margin-inline: -2rem;
}

.Posts .muted,
.Books .muted {
    color: inherit;
}

:is(.Books, .Posts) a,
:is(.Books, .Posts) .link {
    border-color: var(--background);
}

.footer {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.footer_right {
    margin-top: 1rem;
}

img:not(.no-lightbox) {
    cursor: zoom-in;
}

#lightbox {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: hsla(var(--primary), 80%, 5%, 0.8);
}

#lightbox img {
    position: absolute;
    cursor: zoom-out;
    top: 50%;
    left: 50%;
    width: auto;
    max-width: 90%;
    max-height: 90%;
    transform: translate(-50%, -50%);
}

.grid {
    display: grid;
    gap: var(--gap, var(--space-md));
    grid-template-columns: repeat(
        var(--grid-placement, auto-fill),
        minmax(var(--grid-min-item-size, 13rem), 1fr)
    )
}

.grid[data-columns="2"] {
    --grid-placement: auto-fit;
    --grid-min-item-size: clamp(13rem, 50vw, 15rem);
}

.tag {
    font-size: var(--font-sm);
    background-color: var(--callout-background);
    padding: var(--space-2xs) var(--space-sm) var(--space-xs);
    border-bottom: 0;
    border-radius: 3px;
}

[id^="fn"] {
    font-size: var(--font-sm);
}

hr.dots {
    align-self: flex-end;
    margin: 0 7px;
    background-color: transparent;
    border-bottom: 1px dotted var(--callout-background);
}

#search {
    background-color: var(--background);
    border: 1px solid var(--accents);
    box-shadow: var(--shadow);
    position: fixed;
    top: 20%;
    left: 50%;
    transform: translateX(-50%);
    width: calc(100% - 20px);
    max-width: 660px;
    padding: 0;
    border-radius: 8px;
    color: var(--text);
}

#search form {
    position: sticky;
    top: 0;
    background-color: var(--background);
}

#search form:has(~ ul:not(:empty)) {
    border-bottom: 1px solid var(--callout-background);
}

#search input {
    background-color: transparent;
    border: none;
    font-size: var(--font-md);
    font-family: "Fira Sans", sans;
    width: 100%;
    padding: var(--space-md);
    color: inherit;
}

#search input:active,
#search input:focus {
    outline: none;
}

#search input::placeholder {
    color: var(--accents);
}

dialog::backdrop {
    background-color: hsla(var(--primary), 80%, 5%, 0.8);
}

#search ul:not(:empty) {
    list-style: none;
    padding: var(--space-md) 0;
    max-height: 300px;
    overflow: auto;
}

#search ul mark {
    background-color: var(--muted);
}

#search ul li {
    margin-top: 0;
    padding: var(--space-md);
    margin-block: calc(-1 * var(--space-md));
}

#search ul li:not(:first-child) {
    margin-block: calc(-1.5 * var(--space-md)); /* bein cheeky here */
}

#search ul li a {
    display: block;
    border-bottom: none;
    padding: var(--space-sm);
    margin: calc(-1 * var(--space-xs));
}

#search ul li[aria-selected="true"] a {
    border-radius: 4px;
    background-color: var(--callout-background);
}

@media screen and (min-width: 599px) {
    .md\:text-right { text-align: right; }
}

@media screen and (min-width: 769px) {
    .footer { flex-direction: row; }

    .footer_right {
        text-align: right;
        margin-top: 0;
    }
}

